# service

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  find_references.py  pyproject.toml  requirements-dev.txt
examples/: batch_check.sh  check_papers.py
service/: __init__.py  cli.py  email_sender.py  openreview_client.py  pdf_checker.py
service/templates/: ac_comment.txt  reminder_email.txt  reviewer_rebuttal_nudge.txt
tests/: test_cli.py  test_pdf_checker.py
