[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "service"
version = "0.1.0"
description = "Command-line utilities for academic service jobs"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "click>=8.0.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.7.0",
    "colorama>=0.4.0",
    "rich>=12.0.0",
    "openreview-py>=1.0.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]

[project.scripts]
service = "service.cli:main"

[project.urls]
"Homepage" = "https://github.com/yourusername/service"
"Bug Reports" = "https://github.com/yourusername/service/issues"
"Source" = "https://github.com/yourusername/service"

[tool.setuptools.packages.find]
where = ["."]
include = ["service*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true